Updated Name Service
Name Service now leverages the Tree Name Search client to retrieve
information about where surnames occur in the world.  The top 3 results
are returned from the service and included by the controller in the
outgoing message.